fix: focus and active menus visibility

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,4 +11,20 @@
   #hubspot-messages-iframe-container {
     color-scheme: light;
   }
+
+  .menu-btn:focus-within + .menu,
+  .menu-btn:has(+ .menu button:focus-visible) + .menu {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  .menu-btn:hover + .menu {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  .menu:hover {
+    visibility: visible;
+    opacity: 1;
+  }
 }
